--- a/latex/introduction/introduction.tex
+++ b/latex/introduction/introduction.tex
@@ -2,7 +2,7 @@
 
 \input{introduction/containerization}
 \input{introduction/kubernetes}
-\input{introduction/security_automation}
+%\input{introduction/security_automation}
 
 
 
