--- a/latex/references.bib
+++ b/latex/references.bib
@@ -18,3 +18,20 @@ title = {What is containerization?},
 author = {Stephanie Susnjara (IBM), Ian Smalley (IBM)},
 note = {\url{https://www.ibm.com/topics/containerization}, Accessed: 4.11.2024}
 }
+
+% Rancher Desktop web page
+@article{rancher-desktop,
+title = {Rancher Desktop by SUSE},
+author = {SUSE Rancher Engineering group},
+note = {\url{https://rancherdesktop.io/}, Accessed: 2.12.2024}
+}
+
+% Kubernetes in action book
+@book{kubernetes-in-action,
+  author    = {Marko Lukša},
+  title     = {Kubernetes in Action},
+  year      = {2018},
+  publisher = {Manning Publications Co.},
+  address   = {20 Baldwin Road, PO Box 761, Shelter Island, NY 11964},
+  isbn      = {9781617293726},
+}
