--- a/latex/references.bib
+++ b/latex/references.bib
@@ -8,14 +8,14 @@ note = {\url{https://kubernetes.io/}, Accessed: 4.11.2024}
 % IBM page on Kubernetes
 @article{ibm-kubernetes,
 title = {What is Kubernetes?},
-author = {Stephanie Susnjara (IBM), Ian Smalley (IBM)},
+author = {Stephanie Susnjara, Ian Smalley},
 note = {\url{https://www.ibm.com/topics/kubernetes}, Accessed: 4.11.2024}
 }
 
 % IBM page on containerization
 @article{ibm-containerization,
 title = {What is containerization?},
-author = {Stephanie Susnjara (IBM), Ian Smalley (IBM)},
+author = {Stephanie Susnjara, Ian Smalley},
 note = {\url{https://www.ibm.com/topics/containerization}, Accessed: 4.11.2024}
 }
 
