--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,29 +1,29 @@
 % Kubernetes official webpage
 @article{kubernetes,
-title = {Kubernetes official web},
-author = {The Linux Foundation},
-note = {\url{https://kubernetes.io/}, Accessed: 4.11.2024}
+  title = {Kubernetes official webpage},
+  author = {The Linux Foundation},
+  note = {\url{https://kubernetes.io/}, Accessed: 4.11.2024}
 }
 
 % IBM page on Kubernetes
 @article{ibm-kubernetes,
-title = {What is Kubernetes?},
-author = {Stephanie Susnjara, Ian Smalley},
-note = {\url{https://www.ibm.com/topics/kubernetes}, Accessed: 4.11.2024}
+  title = {What is Kubernetes?},
+  author = {Stephanie Susnjara and Ian Smalley},
+  note = {\url{https://www.ibm.com/topics/kubernetes}, Accessed: 4.11.2024}
 }
 
 % IBM page on containerization
 @article{ibm-containerization,
-title = {What is containerization?},
-author = {Stephanie Susnjara, Ian Smalley},
-note = {\url{https://www.ibm.com/topics/containerization}, Accessed: 4.11.2024}
+  title = {What is containerization?},
+  author = {Stephanie Susnjara and Ian Smalley},
+  note = {\url{https://www.ibm.com/topics/containerization}, Accessed: 4.11.2024}
 }
 
 % Rancher Desktop web page
 @article{rancher-desktop,
-title = {Rancher Desktop by SUSE},
-author = {SUSE Rancher Engineering group},
-note = {\url{https://rancherdesktop.io/}, Accessed: 2.12.2024}
+  title = {Rancher Desktop by SUSE},
+  author = {SUSE Rancher Engineering group},
+  note = {\url{https://rancherdesktop.io/}, Accessed: 2.12.2024}
 }
 
 % Kubernetes in action book
@@ -34,4 +34,68 @@ note = {\url{https://rancherdesktop.io/}, Accessed: 2.12.2024}
   publisher = {Manning Publications Co.},
   address   = {20 Baldwin Road, PO Box 761, Shelter Island, NY 11964},
   isbn      = {9781617293726},
+}
+
+% V. B. Mahajan and S. B. Mane, "Detection, Analysis and Countermeasures
+% for Container based Misconfiguration using Docker and Kubernetes",
+% 2022 International Conference on Computing, Communication, Security
+% and Intelligent Systems (IC3SIS), 2022, pp. 1-6, doi: 10.1109/
+% IC3SIS54991.2022.9885293. https://ieeexplore.ieee.org/document/9885293
+
+@inproceedings{detection,
+  title = {Detection, Analysis and Countermeasures for Container based Misconfiguration using Docker and Kubernetes},
+  author = {V. B. Mahajan and S. B. Mane},
+  year = {2022},
+  url = {https://ieeexplore.ieee.org/document/9885293},
+  publisher = {IEEE},
+  booktitle = {2022 International Conference on Computing, Communication, Security and Intelligent Systems (IC3SIS)}
+}
+
+% D. B. Bose, A. Rahman and S. I. Shamim, "‘Under-reported’ Security Defects
+% in Kubernetes Manifests", 2021 IEEE/ACM 2nd International Workshop on
+% Engineering and Cybersecurity of Critical Systems (EnCyCriS), 2021, pp.
+% 9-12, doi: 10.1109/EnCyCriS52570.2021.00009. https://ieeexplore.ieee.org/
+% document/9476056
+
+@inproceedings{defects,
+  title = {`Under-reported' Security Defects in Kubernetes Manifests},
+  author = {D. B. Bose and A. Rahman and S. I. Shamim},
+  year = {2021},
+  url = {https://ieeexplore.ieee.org/document/9476056},
+  publisher = {IEEE},
+  booktitle = {2021 IEEE/ACM 2nd International Workshop on Engineering and Cybersecurity of Critical Systems (EnCyCriS)}
+}
+
+% Castillo Rivas, D.A., Guamán, D. (2021). "Performance and Security
+% Evaluation in Microservices Architecture Using Open Source Containers".
+% In: Botto-Tobar, M., Montes León, S., Camacho, O., Chávez, D., Torres-
+% Carrión, P., Zambrano Vizuete, M. (eds) Applied Technologies. ICAT 2020.
+% Communications in Computer and Information Science, vol 1388. Springer,
+% Cham. https://doi.org/10.1007/978-3-030-71503-8_37
+
+@inproceedings{evaluation,
+  title = {Performance and Security Evaluation in Microservices Architecture Using Open Source Containers},
+  author = {Castillo Rivas, D. A. and Guamán, D.},
+  year = {2021},
+  url = {https://doi.org/10.1007/978-3-030-71503-8_37},
+  publisher = {Springer},
+  volume = {1388},
+  booktitle = {Communications in Computer and Information Science}
+}
+
+% Clinton Cao, Agathe Blaise, Sicco Verwer, and Filippo Rebecchi (2022).
+% "Learning State Machines to Monitor and Detect Anomalies on a
+% Kubernetes Cluster". In Proceedings of the 17th International Conference
+% on Availability, Reliability and Security (ARES '22). Association for
+% Computing Machinery, New York, NY, USA, Article 117, 1–9. https://
+% doi.org/10.1145/3538969.3543810
+
+@inproceedings{machines,
+  title = {Learning State Machines to Monitor and Detect Anomalies on a Kubernetes Cluster},
+  author = {Clinton Cao and Agathe Blaise and Sicco Verwer and Filippo Rebecchi},
+  year = {2022},
+  url = {https://doi.org/10.1145/3538969.3543810},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  booktitle = {17th International Conference on Availability, Reliability and Security (ARES '22)}
 }
