--- a/latex/research/security_automation.tex
+++ b/latex/research/security_automation.tex
@@ -11,7 +11,7 @@ One of the ways to classify Kubernetes security scanners is by the scan target. 
 
 Cluster security scanners can be further classified by the execution point. Again, there is usually more than one way to run a scan, but here are a few options: run a scanner tool as a container, run it from a remote machine connected to the cluster, run it is an operator, which can perform scan automatically on a regular basis. To always keep cluster up-to-date with the most recent security patches the best solution would be to either install an operator or integrate a security scanner tool into your CI/CD pipeline.
 
-\subsection{Selection criteria}
+\subsection{Selection Criteria}
 
 To perform our assessment we have chosen from a variety of Kubernetes security scanners. Though the area is still relatively new, there is a variety of tools with different purposes available on the market. We made our choice based on the following criteria:
 \begin{itemize}
