--- a/latex/terminology.tex
+++ b/latex/terminology.tex
@@ -20,6 +20,8 @@
     \item \textbf{K8s} - Kubernetes.
     \item \textbf{OS} - Operating System.
     \item \textbf{VM} - Virtual Machine.
+    \item \textbf{GUI} - Graphical User Interface.
+    \item \textbf{CLI} - Command-line Interface.
     \item \textbf{CI/CD} - Continuous Integration/Continuous Deployment.
     \item \textbf{RBAC} - Role Based Access Control.
     \item \textbf{AWS} - Amazon Web Services.
