--- a/latex/motivation.tex
+++ b/latex/motivation.tex
@@ -4,10 +4,6 @@
 
 As the world's biggest corporations start grasping the power of the Cloud Computing, stakeholders are raising concerns regarding the security of the most popular and accessible Container Orchestration platform - Kubernetes. Opinion of the experts on this matter varies significantly and this paper aims to make a contribution to this dispute by determining how well can be Kubernetes cluster's security monitored.
 
-We compare and evaluate the capabilities of the most popular security tools designed specifically for Kubernetes against official and unofficial Kubernetes security recommendations.
+We compare and evaluate the capabilities of the most popular security tools designed specifically for Kubernetes against official and unofficial Kubernetes security recommendations. Furthermore, we develop a Kubernetes monitoring tool that aims to compliment existing infrastructure with additional security monitoring capabilities. Our dashboard gathers scanner data, parses the results and list found misconfigurations and vulnerabilities in readable format.
 
-%The proposed system is our own convolutional neural network, that extracts features from the images and classifies them based on the object 
-
-%With this in mind, we propose a convolutional neural network to solve this task 
-
-%In recent years, the machine learning methods have spiked the interest in computer vision and the astronomical field is no exception. 
+At the moment of witing this paper, a number of academic papers on Kubernetes security is limited and the topics of research have little in common with our paper. For instance, in \cite{defects} authors perform a scan of commits into some of the OSS Gilab repositories to determine the frequency of security defects in Kubernetes manifests based on the appearence of particular keywords in commit messages. The dataset size is very small and the methodology does not lead to reliable results. Thus, this article has no bearing on our paper. Paper \cite{detection} proposes a model for automatic misconfiguration detection and fix model for the containers during the deployment. The article is purely theoretical and the proposed model has no application in our case. While automatic failure mitigation is not our goal, we provide a strong base for further research on this topic as we discuss in Chapter \ref{chap:conclusion}. Authors in \cite{machines} provide a strong research into automated anomaly detection inside the Kubernetes cluster using probabilistic state machines. Proposed method yields good results and outperforms existing ML-based solutions. Finally, probably the most relevant paper for our research is \cite{evaluation}. Not only it utilizes DevOps approach, but also partly overlaps with our research. While they focus their research on Docker images, we further expand it to the Kubernetes platform and focus on the Kubernetes security tools, in particular.
