latex & ksa updates (#26)

--- a/latex/implementation/implementation.tex
+++ b/latex/implementation/implementation.tex
@@ -1,6 +1,8 @@
-\chapter{Implementation} \label{chap:implementation}
+\chapter{Implementation}
+\label{chap:implementation}
 
-In this chapter, we talk about the implementation of the starGen generator and the recognition system. First, we describe the structure of the starGen project, used scripts and the functionality of each class. Next, we describe the implementation and the structure of the recognition system and the parameters of the machine, where the system is deployed. 
+This chapter focuses on the implementation aspects of the KSA Dashboard. 
 
-\input{implementation/starGen}
-\input{implementation/network}
+\input{implementation/parser}
+\input{implementation/aggregator}
+\input{implementation/dashboard}
