--- a/latex/main.tex
+++ b/latex/main.tex
@@ -28,7 +28,7 @@
 \usepackage{tabularx}
 \usepackage{textcomp}
 \usepackage{caption}
-\usepackage{natbib}
+\usepackage[sort&compress]{natbib}
 \usepackage{subcaption}
 \usepackage[font=large]{subcaption}
 \usepackage{emptypage}
@@ -276,7 +276,7 @@ First, I would like to express my gratitude to Mgr. Ľubomír Firment for his gu
 \input{research/research}
 % \input{proposed methods/proposed_methods}
 % \input{software design/software_design}
-% \input{implementation/implementation}
+\input{implementation/implementation}
 % \input{data_generation/data_generation}
 % \input{research/research}
 \input{results/results}
