--- a/latex/references.bib
+++ b/latex/references.bib
@@ -99,3 +99,16 @@
   address = {New York, NY, USA},
   booktitle = {17th International Conference on Availability, Reliability and Security (ARES '22)}
 }
+
+% Aquasec article on security best practices
+@article{aquasec-security-best-practices,
+  title = {Kubernetes Security Basics and 10 Essential Best Practices},
+  author = {Rani Osnat},
+  note = {\url{https://www.aquasec.com/cloud-native-academy/kubernetes-in-production/kubernetes-security-best-practices-10-steps-to-securing-k8s/}, Accessed: 7.3.2025}
+}
+
+% Aquasec article on security best practices
+@article{aquasec-kubernetes-vulnerability-database-misconfigurations,
+  title = {Aquasec Kubernetes vulnerability database - Misconfigurations},
+  note = {\url{https://avd.aquasec.com/misconfig/kubernetes/}, Accessed: 7.3.2025}
+}
