--- a/latex/research/research.tex
+++ b/latex/research/research.tex
@@ -1,6 +1,7 @@
 \chapter{Research} \label{chap:research}
 
 \input{research/security_automation}
+\input{research/methodology}
 \input{research/vulnerability_classification}
 \input{research/experimental_environment}
 
